# gymnast-pose-tracker

./: .gitignore  README.md  pyproject.toml  run.py
src/: detection.py  metrics.py  pipeline.py  pose_estimation.py  temp.py  tracking.py  visualization.py
